syntax = "proto3";

option csharp_namespace = "Users.Grpc.User";

import "google/protobuf/empty.proto";

package user;

service UserService {
  rpc Register (RegisterUserRequest) returns (RegisterUserResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Logout (LogoutRequest) returns (google.protobuf.Empty);
}

message RegisterUserRequest {
  string username = 1;
  string password = 2;
}

message RegisterUserResponse {
  oneof result {
    google.protobuf.Empty successfully_registered = 1;
    string failure_message = 2;
  }
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message TokenPair {
  string access_token = 1;
  string refresh_token = 2;
}

message LoginFailure {
  string message = 1;
}

message LoginResponse {
  oneof result {
    TokenPair tokens = 1;
    LoginFailure failure = 2;
  }
}

message LogoutRequest {
  string refresh_token = 1;
}